removing bootstrap, export modal, table improvements

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 table {
 	font-family: arial, sans-serif;
 	border-collapse: collapse;
-	width: 25%;
+	width: auto;
 	margin: 30px;
 }
 
@@ -11,14 +11,86 @@ td, th {
 	padding: 8px;
 }
 
+.data-actions {
+	float: right;
+}
+
 .separator {
 	border-top: 2px solid black;
 }
 
+.table-primary>th {
+	background-color: rgba(184, 218, 255, 1);
+}
+
 .table-success>th {
-	background-color: #c3e6cb;
+	background-color: rgba(195, 230, 203, 0.6);
 }
 
 .table-danger>th {
-	background-color: #f5c6cb;
+	background-color: rgba(245, 198, 203, 0.6);
+}
+
+.modal-mask {
+	position: fixed;
+	z-index: 9998;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0, 0, 0, .5);
+	display: table;
+	transition: opacity .3s ease;
+}
+
+.modal-wrapper {
+	display: table-cell;
+	vertical-align: middle;
+}
+
+.modal-container {
+	width: 300px;
+	margin: 0px auto;
+	padding: 20px 30px;
+	background-color: #fff;
+	border-radius: 2px;
+	box-shadow: 0 2px 8px rgba(0, 0, 0, .33);
+	transition: all .3s ease;
+	font-family: Helvetica, Arial, sans-serif;
+}
+
+.modal-header h3 {
+	margin-top: 0;
+	color: #42b983;
+}
+
+.modal-body {
+	margin: 20px 0;
+}
+
+.modal-default-button {
+	float: right;
+}
+
+/*
+ * The following styles are auto-applied to elements with
+ * transition="modal" when their visibility is toggled
+ * by Vue.js.
+ *
+ * You can easily play with the modal transition by editing
+ * these styles.
+ */
+
+.modal-enter {
+	opacity: 0;
+}
+
+.modal-leave-active {
+	opacity: 0;
+}
+
+.modal-enter .modal-container,
+.modal-leave-active .modal-container {
+	-webkit-transform: scale(1.1);
+	transform: scale(1.1);
 }
