--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ td, th {
 	padding: 8px;
 }
 
-.data-actions {
+.actions {
 	float: right;
 }
 
@@ -78,21 +78,12 @@ td, th {
 }
 
 .modal-body {
-	margin: 20px 0;
+	margin: 20px 5px;
 }
 
-.modal-default-button {
-	float: right;
+.modal-footer {
+	text-align: right;
 }
-
-/*
- * The following styles are auto-applied to elements with
- * transition="modal" when their visibility is toggled
- * by Vue.js.
- *
- * You can easily play with the modal transition by editing
- * these styles.
- */
 
 .modal-enter {
 	opacity: 0;
