--- a/style.css
+++ b/style.css
@@ -53,6 +53,7 @@ td, th {
 .have-input {
 	background: none;
 	border: none;
+	font-family: arial, sans-serif;
 	font-size: 16px;
 	font-weight: bold;
 	width: 35px;
