--- a/style.css
+++ b/style.css
@@ -8,6 +8,14 @@ img {
 	vertical-align: bottom;
 }
 
+textarea {
+	resize: none;
+	width:100%;
+	height:100%;
+	box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+}
+
 table {
 	font-family: arial, sans-serif;
 	border-collapse: collapse;
